2007-04-12  Roman Kennke  <roman@kennke.org>

	* java/nio/CharBuffer.java
	(wrap(CharSequence,int,int)): Reimplemented using specialized
	subclass.
	* java/nio/CharSequenceBuffer.java: New class. Implements char
	buffers that wrap CharSequences.

2007-04-12  Francis Kung  <fkung@redhat.com>

	PR 23887
	* gnu/java/awt/peer/gtk/CairoGraphics2D.java
	(drawGlyphVector): Check for transforms before using optimized path.
	* gnu/java/awt/peer/gtk/FreetypeGlyphVector.java
	(FreetypeGlyphVector(FreetypeGlyphVector)): Initialize glyphTransforms array
	to null and check for nulls in copied array.
	(hasTransforms): New method.
	(performDefaultLayout): Check for identity transform.
	(setGlyphTransform): Check for equality before making changes.

2007-04-12  Francis Kung  <fkung@redhat.com>

	PR 23887
	* gnu/java/awt/peer/gtk/FreetypeGlyphVector.java
	(getGlyphLogicalBounds): Fix number of coordinates in transform call.
	(performDefaultLayout): Respect transformation in font attributes.
	* javax/swing/plaf/basic/BasicProgressBarUI.java
	(getStringPlacement): Handle vertical orientations.
	(paintString): Space vertical text properly.

2007-04-12  Francis Kung  <fkung@redhat.com>

	PR 31539
	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GdkFontPeer.c
	(ft2_map): New static variable.
	(Java_gnu_java_awt_peer_gtk_GdkFontPeer_initStaticState): Set up ft2_map.
	(Java_gnu_java_awt_peer_gtk_GdkFontPeer_setFont): Use cached ft2_map.

2007-04-12  Christian Thalinger  <twisti@complang.tuwien.ac.at>

	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GtkClipboard.c
	(clipboard_get_func): Call DeleteLocalRef.
	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GtkSelection.c
	(clipboard_targets_received): Likewise.
	(clipboard_uris_received): Likewise.

2007-04-12  Christian Thalinger  <twisti@complang.tuwien.ac.at>

	* LICENSE: Added m4/ax_func_which_gethostbyname_r.m4 license.
	* configure.ac: Added AX_FUNC_WHICH_GETHOSTBYNAME_R check.
	* m4/ax_func_which_gethostbyname_r.m4: New file.